--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,12 +1,7 @@
 name: workflow
 
 on:
-  # push:
-  #   branches:
-  #     - main
-  #   paths-ignore:
-  #     - 'README.md'
-  workflow_dispatch:
+  workflow_dispatch:  # Trigger workflow only on manual execution
 
 permissions:
   id-token: write
@@ -38,6 +33,14 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y jq unzip
+          
+      - name: Pre-cleanup: Free up disk space
+        run: |
+          echo "Starting pre-cleanup..."
+          docker system prune -af --volumes  # Remove all unused containers, images, and volumes
+          sudo rm -rf /var/lib/docker/tmp/*  # Remove temporary files from Docker storage
+          echo "Pre-cleanup completed."
+          
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -63,6 +66,11 @@ jobs:
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
           
+      - name: Post-cleanup: Free up disk space
+        run: |
+          echo "Starting post-cleanup..."
+          docker system prune -af --volumes  # Free space after build
+          echo "Post-cleanup completed."
           
   Continuous-Deployment:
     needs: build-and-push-ecr-image
@@ -81,19 +89,27 @@ jobs:
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
-      
+
+      - name: Pre-pull cleanup: Free up disk space
+        run: |
+          echo "Starting pre-pull cleanup..."
+          docker system prune -af --volumes  # Remove unused Docker objects
+          echo "Pre-pull cleanup completed."
       
       - name: Pull latest images
         run: |
-         docker pull ${{secrets.AWS_ECR_LOGIN_URI}}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
+          docker pull ${{secrets.AWS_ECR_LOGIN_URI}}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
          
-      # - name: Stop and remove  container if running
-      #   run: |
-      #    docker ps -q --filter "name=mltest" | grep -q . && docker stop mltest && docker rm -fv mltest
-       
+      - name: Post-pull cleanup: Free up disk space
+        run: |
+          echo "Starting post-pull cleanup..."
+          docker system prune -af --volumes  # Cleanup after pulling image
+          echo "Post-pull cleanup completed."
+         
       - name: Run Docker Image to serve users
         run: |
-         docker run -d -p 8080:8080 --ipc="host" --name=mltest -e 'AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}' -e 'AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}' -e 'AWS_REGION=${{ secrets.AWS_REGION }}'  ${{secrets.AWS_ECR_LOGIN_URI}}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
+          docker run -d -p 8080:8080 --ipc="host" --name=mltest -e 'AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}' -e 'AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}' -e 'AWS_REGION=${{ secrets.AWS_REGION }}'  ${{secrets.AWS_ECR_LOGIN_URI}}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
+         
       - name: Clean previous images and containers
         run: |
-         docker system prune -f
+          docker system prune -af --volumes  # Clean up again to ensure no space issues
